<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/joke1"
            style="@style/JokeCard">

            <include layout="@layout/joke_with_actions"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/joke2"
            style="@style/JokeCard">

            <include layout="@layout/joke_with_actions"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/joke3"
            style="@style/JokeCard">

            <include layout="@layout/joke_with_actions"/>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
