<resources>
    <string name="app_label">Chuck Jokes</string>
    <string name="start_main_activity">Start Main Activity</string>
    <string name="random">Random</string>
    <string name="categories">Categories</string>
    <string name="none">none</string>
    <string name="favorites">Favorites</string>
    <string name="nothing_in_favorites">Nothing in Favorites</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="undo">Undo</string>
    <string name="add_to_favorites">Add to favorites</string>
</resources>
