<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing"
    >

    <Button
        android:id="@+id/mainActivityButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_main_activity"
        />
</LinearLayout>
