<?xml version="1.0" encoding="utf-8"?>
<TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/randomJoke"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:ellipsize="end"
    android:fontFamily="serif"
    android:gravity="center_vertical"

    android:maxLines="7"
    android:padding="@dimen/spacing"
    android:scrollHorizontally="true"

    android:textAlignment="center"
    android:textColor="@color/text"
    android:textSize="30sp"
    />
