<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text"
        style="@style/JokeCardText"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/border"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/half_spacing"
        android:paddingRight="@dimen/half_spacing"
        >

        <ImageView
            android:id="@+id/add"
            style="@style/FavoriteIcon.Add"
            />

        <ImageView
            android:id="@+id/remove"
            style="@style/FavoriteIcon.Remove"
            />
    </LinearLayout>
</LinearLayout>
