<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/randomJokesViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addToFavorites"
        style="@style/FavoriteActionButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_favorite_border_white_24dp"
        android:tint="@color/text"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/removeFromFavorites"
        style="@style/FavoriteActionButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_favorite_white_24dp"
        />
</RelativeLayout>
